frontend/tests/cases/positive/instanceCoeffectVariable.gr
interface Simple (a : Type) (b : Coeffect) (c : b)

data A = B

instance Simple A Nat 1
